--- a/wsj_api.ipynb
+++ b/wsj_api.ipynb
@@ -15,28 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_quotes_from_wsj(endpoint):\n",
-    "    headers = {\n",
-    "        \"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64)\"\n",
-    "        }\n",
-    "    quotes = requests.get(\n",
-    "        endpoint,\n",
-    "        headers=headers\n",
-    "    )\n",
-    "    df = pd.DataFrame(quotes.json()['data']['instruments'])\n",
-    "    df = df[[\n",
-    "             'maturityDate',\n",
-    "             'coupon', \n",
-    "             'bid', \n",
-    "        \n",
-    "        'ask', \n",
-    "             'change', \n",
-    "             'askYield', \n",
-    "             ]]\n",
+    "    headers = {\"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64)\"}\n",
+    "    quotes = requests.get(endpoint, headers=headers)\n",
+    "    df = pd.DataFrame(quotes.json()[\"data\"][\"instruments\"])\n",
+    "    df = df[\n",
+    "        [\n",
+    "            \"maturityDate\",\n",
+    "            \"coupon\",\n",
+    "            \"bid\",\n",
+    "            \"ask\",\n",
+    "            \"change\",\n",
+    "            \"askYield\",\n",
+    "        ]\n",
+    "    ]\n",
     "\n",
     "    timestamp = quotes.json()[\"data\"][\"timestamp\"]\n",
     "    timestamp_dt = datetime.strptime(timestamp, \"%A, %B %d, %Y\")\n",
@@ -47,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -78,59 +74,59 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ask</th>\n",
-       "      <th>askYield</th>\n",
-       "      <th>bid</th>\n",
-       "      <th>change</th>\n",
-       "      <th>coupon</th>\n",
        "      <th>maturityDate</th>\n",
+       "      <th>coupon</th>\n",
+       "      <th>bid</th>\n",
+       "      <th>ask</th>\n",
+       "      <th>change</th>\n",
+       "      <th>askYield</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>99.3020</td>\n",
-       "      <td>4.6080</td>\n",
-       "      <td>99.2920</td>\n",
-       "      <td>0.0020</td>\n",
-       "      <td>1.750</td>\n",
        "      <td>7/31/2024</td>\n",
+       "      <td>1.750</td>\n",
+       "      <td>99.2920</td>\n",
+       "      <td>99.3020</td>\n",
+       "      <td>0.0020</td>\n",
+       "      <td>4.6080</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>99.3040</td>\n",
-       "      <td>4.568</td>\n",
-       "      <td>99.2940</td>\n",
-       "      <td>0.0040</td>\n",
-       "      <td>2.125</td>\n",
        "      <td>7/31/2024</td>\n",
+       "      <td>2.125</td>\n",
+       "      <td>99.2940</td>\n",
+       "      <td>99.3040</td>\n",
+       "      <td>0.0040</td>\n",
+       "      <td>4.568</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>99.3100</td>\n",
-       "      <td>4.611</td>\n",
-       "      <td>99.3000</td>\n",
-       "      <td>0.0060</td>\n",
-       "      <td>3.000</td>\n",
        "      <td>7/31/2024</td>\n",
+       "      <td>3.000</td>\n",
+       "      <td>99.3000</td>\n",
+       "      <td>99.3100</td>\n",
+       "      <td>0.0060</td>\n",
+       "      <td>4.611</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>99.2300</td>\n",
-       "      <td>5.090</td>\n",
-       "      <td>99.2200</td>\n",
-       "      <td>0.0060</td>\n",
-       "      <td>0.375</td>\n",
        "      <td>8/15/2024</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>99.2200</td>\n",
+       "      <td>99.2300</td>\n",
+       "      <td>0.0060</td>\n",
+       "      <td>5.090</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>99.2660</td>\n",
-       "      <td>5.101</td>\n",
-       "      <td>99.2560</td>\n",
-       "      <td>unch.</td>\n",
-       "      <td>2.375</td>\n",
        "      <td>8/15/2024</td>\n",
+       "      <td>2.375</td>\n",
+       "      <td>99.2560</td>\n",
+       "      <td>99.2660</td>\n",
+       "      <td>unch.</td>\n",
+       "      <td>5.101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -143,48 +139,48 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>336</th>\n",
-       "      <td>86.0260</td>\n",
-       "      <td>4.490</td>\n",
-       "      <td>86.0060</td>\n",
-       "      <td>0.6960</td>\n",
-       "      <td>3.625</td>\n",
        "      <td>5/15/2053</td>\n",
+       "      <td>3.625</td>\n",
+       "      <td>86.0060</td>\n",
+       "      <td>86.0260</td>\n",
+       "      <td>0.6960</td>\n",
+       "      <td>4.490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>337</th>\n",
-       "      <td>94.0660</td>\n",
-       "      <td>4.483</td>\n",
-       "      <td>94.0460</td>\n",
-       "      <td>0.0300</td>\n",
-       "      <td>4.125</td>\n",
        "      <td>8/15/2053</td>\n",
+       "      <td>4.125</td>\n",
+       "      <td>94.0460</td>\n",
+       "      <td>94.0660</td>\n",
+       "      <td>0.0300</td>\n",
+       "      <td>4.483</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>338</th>\n",
-       "      <td>104.1760</td>\n",
-       "      <td>4.469</td>\n",
-       "      <td>104.1560</td>\n",
-       "      <td>0.0320</td>\n",
-       "      <td>4.750</td>\n",
        "      <td>11/15/2053</td>\n",
+       "      <td>4.750</td>\n",
+       "      <td>104.1560</td>\n",
+       "      <td>104.1760</td>\n",
+       "      <td>0.0320</td>\n",
+       "      <td>4.469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>339</th>\n",
-       "      <td>96.1130</td>\n",
-       "      <td>4.473</td>\n",
-       "      <td>96.0930</td>\n",
-       "      <td>0.0280</td>\n",
-       "      <td>4.250</td>\n",
        "      <td>2/15/2054</td>\n",
+       "      <td>4.250</td>\n",
+       "      <td>96.0930</td>\n",
+       "      <td>96.1130</td>\n",
+       "      <td>0.0280</td>\n",
+       "      <td>4.473</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>340</th>\n",
-       "      <td>102.1740</td>\n",
-       "      <td>4.469</td>\n",
-       "      <td>102.1540</td>\n",
-       "      <td>0.0380</td>\n",
-       "      <td>4.625</td>\n",
        "      <td>5/15/2054</td>\n",
+       "      <td>4.625</td>\n",
+       "      <td>102.1540</td>\n",
+       "      <td>102.1740</td>\n",
+       "      <td>0.0380</td>\n",
+       "      <td>4.469</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -192,23 +188,23 @@
        "</div>"
       ],
       "text/plain": [
-       "          ask askYield       bid  change coupon maturityDate\n",
-       "0     99.3020   4.6080   99.2920  0.0020  1.750    7/31/2024\n",
-       "1     99.3040    4.568   99.2940  0.0040  2.125    7/31/2024\n",
-       "2     99.3100    4.611   99.3000  0.0060  3.000    7/31/2024\n",
-       "3     99.2300    5.090   99.2200  0.0060  0.375    8/15/2024\n",
-       "4     99.2660    5.101   99.2560   unch.  2.375    8/15/2024\n",
-       "..        ...      ...       ...     ...    ...          ...\n",
-       "336   86.0260    4.490   86.0060  0.6960  3.625    5/15/2053\n",
-       "337   94.0660    4.483   94.0460  0.0300  4.125    8/15/2053\n",
-       "338  104.1760    4.469  104.1560  0.0320  4.750   11/15/2053\n",
-       "339   96.1130    4.473   96.0930  0.0280  4.250    2/15/2054\n",
-       "340  102.1740    4.469  102.1540  0.0380  4.625    5/15/2054\n",
+       "    maturityDate coupon       bid       ask  change askYield\n",
+       "0      7/31/2024  1.750   99.2920   99.3020  0.0020   4.6080\n",
+       "1      7/31/2024  2.125   99.2940   99.3040  0.0040    4.568\n",
+       "2      7/31/2024  3.000   99.3000   99.3100  0.0060    4.611\n",
+       "3      8/15/2024  0.375   99.2200   99.2300  0.0060    5.090\n",
+       "4      8/15/2024  2.375   99.2560   99.2660   unch.    5.101\n",
+       "..           ...    ...       ...       ...     ...      ...\n",
+       "336    5/15/2053  3.625   86.0060   86.0260  0.6960    4.490\n",
+       "337    8/15/2053  4.125   94.0460   94.0660  0.0300    4.483\n",
+       "338   11/15/2053  4.750  104.1560  104.1760  0.0320    4.469\n",
+       "339    2/15/2054  4.250   96.0930   96.1130  0.0280    4.473\n",
+       "340    5/15/2054  4.625  102.1540  102.1740  0.0380    4.469\n",
        "\n",
        "[341 rows x 6 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,32 +212,12 @@
    "source": [
     "endpoints = [\n",
     "    \"https://www.wsj.com/market-data/bonds/treasuries?id=%7B%22treasury%22%3A%22NOTES_AND_BONDS%22%7D&type=mdc_treasury\",\n",
-    "    \"https://www.wsj.com/market-data/bonds/treasuries?id=%7B%22treasury%22%3A%22BILLS%22%7D&type=mdc_treasury\"\n",
+    "    \"https://www.wsj.com/market-data/bonds/treasuries?id=%7B%22treasury%22%3A%22BILLS%22%7D&type=mdc_treasury\",\n",
     "]\n",
     "\n",
     "treasuries = get_quotes_from_wsj(endpoint=endpoints[0])\n",
     "print(treasuries[1])\n",
     "treasuries[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['ask', 'askYield', 'bid', 'change', 'coupon', 'maturityDate'], dtype='object')"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "treasuries[0].columns"
    ]
   }
  ],
